* Rejoin fix seems to work * Removed `It is ___'s turn.` from logs * Changed starting lives to 3 * Added game name to room header * Added `Lobby` and game name to page title * Changed chat header to just `Chat` * Center-aligned the username in front of prompt in the chatbox

--- a/static/styles.css
+++ b/static/styles.css
@@ -418,4 +418,5 @@ Can turn game room container into grid - 2fr for players and board and 1fr for c
 #chat-input-container {
     position: static;
     display: flex;
+    align-items: center;
 }
